prevent button text from wrapping at all breakpoints
We should enforce better button text instead of changing global button behavior to fix one instance where there is excess button text. If anything, we could create a utility class to reapply text wrap.

--- a/src/scss/components/_button.scss
+++ b/src/scss/components/_button.scss
@@ -10,10 +10,7 @@
   font-size: $btn-font-size;
   line-height: $btn-line-height;
   border-radius: $btn-border-radius;
-
-  @include media(md) {
-    white-space: nowrap;
-  }
+  white-space: nowrap;
 
   &:hover,
   &:focus {
